feat: header and display complete

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,56 @@
+/* RESET */
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    /* debug
+    border: 1px solid black; */
 }
 
 img{
     max-width: 100%;
 }
 
+/* COMMON */
+
 .container{
     margin: 0 auto;
 }
+
+.center{
+    text-align: center;
+}
+
+/* CALC */
+
+.calc{
+    background-color: #E9E3E3;
+    width: 60%;
+    margin-top: 40px;
+    border-radius: 20px;
+}
+
+/* HEADER */
+.header-logo{
+    padding: 20px;
+}
+
+/* DISPLAY */
+.display{
+    background-color: black;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.text-display{
+    font-family: 'Seven Segment', sans-serif;
+    color: #0FBB5F;
+    font-size: 68px;
+    padding: 20px;
+}
+
+
+/* MAIN-CALC */
