--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,30 @@ img{
     width: 100px;
     height: 100px;
     border-radius: 10px;
+    margin: 10px;
 }
 
 .btn-dx{
     font-size: 30px;
-    width: 70px;
+    width: 80px;
     height: 70px;
     border-radius: 10px;
+}
+
+.number{
+    background-color: #BDB7B7;
+}
+
+.orange{
+    background-color: #FD9A0A;
+}
+
+.operations{
+    background-color: #79A3AA;
+}
+
+.orange, .operations{
+    color: white
 }
 
 /* CALC */
