--- a/css/style.css
+++ b/css/style.css
@@ -23,19 +23,29 @@ img{
     text-align: center;
 }
 
+.flex{
+    display: flex;
+}
+
+.btn, .btn-dx{
+    font-family: "Anta", sans-serif;
+    box-shadow: -3px 3px 0px grey;
+    border: 0;
+    border-radius: 10px;
+}
+
 .btn{
     font-size: 40px;
-    width: 100px;
-    height: 100px;
-    border-radius: 10px;
-    margin: 10px;
+    width: 90px;
+    height: 90px;
+    margin: 15px;
 }
 
 .btn-dx{
     font-size: 30px;
     width: 80px;
     height: 70px;
-    border-radius: 10px;
+
 }
 
 .number{
@@ -71,7 +81,6 @@ img{
 /* DISPLAY */
 .display{
     background-color: black;
-    display: flex;
     justify-content: end;
     align-items: center;
 }
@@ -88,7 +97,6 @@ img{
 
 .calc-sx{
     width: 80%;
-    display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
@@ -96,15 +104,9 @@ img{
 
 .calc-dx{
     width: 20%;
-    display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-}
-
-.main-calc{
-    display: flex;
-    height: 600px;
 }
 
 .zero{
