--- a/css/style.css
+++ b/css/style.css
@@ -36,15 +36,15 @@ img{
 
 .btn{
     font-size: 40px;
-    width: 90px;
-    height: 90px;
+    width: calc(100% / 3 - 30px);
+    padding: 30px;
     margin: 15px;
 }
 
 .btn-dx{
     font-size: 30px;
-    width: 80px;
-    height: 70px;
+    width: calc(100%);
+    padding: 20px
 
 }
 
@@ -67,7 +67,7 @@ img{
 /* CALC */
 
 .calc{
-    background-color: #E9E3E3;
+    background-image: linear-gradient(270deg, #eeee 0%, #cdcdcd 100% );
     width: 500px;
     margin-top: 40px;
     border-radius: 20px;
